# prime_Guo_Qingxuan

./: AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  Untitled.ipynb  hw7.ipynb  hw7.py  prime.py  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
prime_qg2218/: __init__.py  cli.py  prime.py  test_prime.py
test_prime/: test_prime.py
tests/: __init__.py  test_prime_qg2218.py
