[tool.poetry]
name = "prime-qg2218"
version = "0.1.2"
description = "first python package"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
myst-nb = "^0.17.2"
sphinx-autoapi = "2.0.0"
sphinx-rtd-theme = "^1.3.0"
sphinx = "5.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
